--- a/index.html
+++ b/index.html
@@ -9,7 +9,223 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 09:05:03 2018</p>
+         Last Run: Sat Dec  1 10:05:03 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>15</td>
+                        <td>79</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>N</td>
+                        <td>99</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>17</td>
+                        <td>78</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>N</td>
+                        <td>98</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-8</td>
+                        <td>24</td>
+                        <td>80</td>
+                        <td>0</td>
+                        <td>13</td>
+                        <td>N</td>
+                        <td>96</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator1"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
+                  var data ={
+           "labels":[
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-8",
+                 "-8",
+                 "-8"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-3",
+                 "-3",
+                 "-3"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator2"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
+                  var data ={
+           "labels":[
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "15",
+                 "17",
+                 "24"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "79",
+                 "78",
+                 "80"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "99",
+                 "98",
+                 "96"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sat Dec  1 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -30,10 +246,10 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>24</td>
+                        <td>30</td>
                         <td>81</td>
                         <td>0</td>
                         <td>14</td>
@@ -45,36 +261,36 @@
                         <td>Overcast</td>
                         <td>-4</td>
                         <td>-9</td>
-                        <td>18</td>
-                        <td>76</td>
+                        <td>24</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>88</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-8</td>
-                        <td>15</td>
-                        <td>71</td>
+                        <td>17</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NNW</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator1"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator3"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator3").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -141,12 +357,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator2"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator4"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator4").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -160,9 +376,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "30",
                  "24",
-                 "18",
-                 "15"
+                 "17"
                ]
              },
              {
@@ -172,8 +388,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "81",
-                 "76",
-                 "71"
+                 "77",
+                 "73"
                ]
              },
              {
@@ -183,8 +399,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "90",
-                 "88",
-                 "89"
+                 "89",
+                 "90"
                ]
              }
            ]
@@ -224,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 09:05:03 2018</p>
+         Last Run: Sat Dec  1 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -284,12 +500,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator3"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator3").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
                   var data ={
            "labels":[
              "09:00 PM",
@@ -356,12 +572,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator4"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator4").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
                   var data ={
            "labels":[
              "09:00 PM",
@@ -439,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Dec  1 09:05:03 2018</p>
+         Last Run: Sat Dec  1 10:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -475,7 +691,7 @@
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>81</td>
                         <td>0</td>
                         <td>8</td>
@@ -499,12 +715,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
                   var data ={
            "labels":[
              "09:00 PM",
@@ -571,12 +787,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
                   var data ={
            "labels":[
              "09:00 PM",
@@ -591,7 +807,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "5",
-                 "5",
+                 "6",
                  "6"
                ]
              },
