--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 11:05:02 2018</p>
+         Last Run: Sun Dec  2 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -29,38 +29,26 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>12:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-8</td>
-                        <td>60</td>
-                        <td>82</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>NNW</td>
-                        <td>100</td>
-                     </tr>
-                     <tr>
                         <td>01:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-8</td>
+                        <td>-2</td>
+                        <td>-6</td>
                         <td>44</td>
-                        <td>78</td>
+                        <td>81</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>97</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>33</td>
-                        <td>73</td>
+                        <td>24</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>94</td>
                      </tr>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -89,8 +76,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
-                 "-8",
+                 "-6",
                  "-6"
                ]
              },
@@ -101,8 +87,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-3",
-                 "-3",
+                 "-2",
                  "-2"
                ]
              }
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "12:00 PM",
              "01:00 PM",
              "02:00 PM"
            ],
@@ -160,9 +144,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "60",
                  "44",
-                 "33"
+                 "24"
                ]
              },
              {
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "82",
-                 "78",
-                 "73"
+                 "81",
+                 "74"
                ]
              },
              {
@@ -182,7 +164,6 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "100",
                  "97",
                  "94"
                ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 11:05:02 2018</p>
+         Last Run: Sun Dec  2 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,11 +229,11 @@
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-11</td>
-                        <td>-15</td>
+                        <td>-16</td>
                         <td>6</td>
                         <td>86</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>36</td>
                      </tr>
@@ -274,7 +255,7 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>5</td>
-                        <td>88</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -305,7 +286,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-15",
+                 "-16",
                  "-16",
                  "-17"
                ]
@@ -389,7 +370,7 @@
                "data":[
                  "86",
                  "85",
-                 "88"
+                 "87"
                ]
              },
              {
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 11:05:02 2018</p>
+         Last Run: Sun Dec  2 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -462,14 +443,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-12</td>
-                        <td>-17</td>
+                        <td>-13</td>
+                        <td>-18</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>1</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -477,7 +458,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>6</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -488,7 +469,7 @@
                         <td>Clear</td>
                         <td>-14</td>
                         <td>-19</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>86</td>
                         <td>0</td>
                         <td>8</td>
@@ -520,7 +501,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-17",
+                 "-18",
                  "-18",
                  "-19"
                ]
@@ -532,7 +513,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-12",
+                 "-13",
                  "-13",
                  "-14"
                ]
@@ -593,7 +574,7 @@
                "data":[
                  "6",
                  "6",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -602,8 +583,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "83",
-                 "83",
+                 "86",
+                 "84",
                  "86"
                ]
              },
@@ -613,7 +594,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
+                 "0",
                  "0",
                  "0"
                ]
@@ -655,7 +636,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Dec  2 11:05:02 2018</p>
+         Last Run: Sun Dec  2 12:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -676,19 +657,19 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-12</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-5</td>
                         <td>-10</td>
                         <td>0</td>
@@ -696,19 +677,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>15</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -817,9 +798,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
+                 "56",
                  "53",
-                 "50"
+                 "51"
                ]
              },
              {
@@ -828,9 +809,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
-                 "15",
-                 "15"
+                 "39",
+                 "40",
+                 "40"
                ]
              }
            ]
